[PE] Ensure update of LayoutSVGShape::NoScalingStrokeTransform

In Pre-SPv175 we forced subtree paint invalidation on non-composited
transform change. SPv175 no longer does that, causing
NonScalingStrokeTransform not updated on ancestor transform change.

We also had a non-obvious bug that LayoutSVGShape::StrokeBoundingBox
didn't get updated on ancestor transform change.

Now always explicitly update non-scaling-stroke data during layout.

Bug: 849080
Cq-Include-Trybots: master.tryserver.blink:linux_trusty_blink_rel;master.tryserver.chromium.linux:linux_layout_tests_slimming_paint_v2
Change-Id: Ia61eb94f43e53a71a80e1102e4d605e4331f44b1
Reviewed-on: https://chromium-review.googlesource.com/1086715
Commit-Queue: Xianzhu Wang <wangxianzhu@chromium.org>
Reviewed-by: Fredrik Söderquist <fs@opera.com>
Cr-Commit-Position: refs/heads/master@{#564584}
Former-commit-id: 85b96ea98619ea7d775e1277ab859cea6d613dbb